--- a/.github/workflows/cbn-scrape-roster-full.yml
+++ b/.github/workflows/cbn-scrape-roster-full.yml
@@ -18,5 +18,7 @@ jobs:
                python -m pip install --upgrade pip
                pip install -r requirements.txt
          -  name: roster scrape python script
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
                python -c 'from actions import fetch_players; fetch_players(fetch = True, update_google_sheet = True)'
