--- a/.github/workflows/cbn-scrape-roster-test.yml
+++ b/.github/workflows/cbn-scrape-roster-test.yml
@@ -18,4 +18,4 @@ jobs:
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python -c 'from actions import fetch_players; fetch_players(fetch = True, update_google_sheet = False)'
+               python -c 'from actions import players; players(fetch = True, update_google_sheet = False)'
