--- a/.github/workflows/cbn-scrape-sheet-only.yml
+++ b/.github/workflows/cbn-scrape-sheet-only.yml
@@ -18,4 +18,4 @@ jobs:
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python -c 'from actions import fetch_players; fetch_players(fetch = False, update_google_sheet = True)'
+               python -c 'from actions import players; players(fetch = False, update_google_sheet = True)'
