Squashed commit of the following:
commit 0c2c415ffe5ab9e1628ceabf618bb534acb40b39
Author: Pete Berryman <peteb206@gmail.com>
Date:   Fri Dec 16 13:17:42 2022 -0600

    print response statuses

commit 4933525650c3610f277dc77108218302717ca472
Author: Pete Berryman <peteb206@gmail.com>
Date:   Thu Dec 15 17:06:20 2022 -0600

    improvements

commit dee7eca4effe8d90c8e9a83e7cc3899394cee6e2
Author: Pete Berryman <peteb206@gmail.com>
Date:   Thu Dec 15 01:13:40 2022 -0600

    re-require lxml and update other packages

commit 80538f0c6f1d0a580e8325996ba0a458430813dd
Author: Pete Berryman <peteb206@gmail.com>
Date:   Thu Dec 15 01:10:22 2022 -0600

    function was renamed

commit f37cbbe5502d915c58375774606246be1432acb9
Author: Pete Berryman <peteb206@gmail.com>
Date:   Thu Dec 15 01:07:45 2022 -0600

    pass api key from secrets into python

commit cae8ffa5e91ff0a52d78339bd9ca6e062bcd3b2f
Author: Pete Berryman <peteb206@gmail.com>
Date:   Thu Dec 15 01:03:06 2022 -0600

    initial push

--- a/.github/workflows/cbn-scrape-roster-full.yml
+++ b/.github/workflows/cbn-scrape-roster-full.yml
@@ -1,7 +1,7 @@
 name: cbn-scrape-roster-full
 on:
-   # schedule:
-      # - cron: '0 8 * * 1' # runs at 8:00 UTC on Mondays
+   schedule:
+      - cron: '0 8 * * 1' # runs at 8:00 UTC on Mondays
    workflow_dispatch:
 jobs:
    build:
@@ -19,24 +19,6 @@ jobs:
                pip install -r requirements.txt
          -  name: roster scrape python script
             env:
-               YEAR: 2023
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python roster_scrape.py y
-         -  name: commit files
-            run: |
-               git config --local user.email "action@github.com"
-               git config --local user.name "GitHub Action"
-               git add -A
-               git commit -m "auto-run roster_scrape.py" -a
-         -  name: push changes
-            uses: ad-m/github-push-action@v0.6.0
-            with:
-               github_token: ${{ secrets.GITHUB_TOKEN }}
-               branch: main
-         -  name: update 2023 google sheet # use pushed results to update Google Sheet
-            env:
-               KEYFILE: ${{ secrets.KEYFILE }}
-               SHEET_NAME: Canadians in College
-               YEAR: 2023
-            run: |
-               python roster_scrape.py n
+               python -c 'from actions import players; players(fetch = True, update_google_sheet = True)'
