--- a/.github/workflows/cbn-scrape-roster-test.yml
+++ b/.github/workflows/cbn-scrape-roster-test.yml
@@ -16,24 +16,6 @@ jobs:
                pip install -r requirements.txt
          -  name: roster scrape python script
             env:
-               YEAR: 2023
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python roster_scrape.py y
-         -  name: commit files
-            run: |
-               git config --local user.email "action@github.com"
-               git config --local user.name "GitHub Action"
-               git add -A
-               git commit -m "auto-run roster_scrape.py" -a
-         -  name: push changes
-            uses: ad-m/github-push-action@v0.6.0
-            with:
-               github_token: ${{ secrets.GITHUB_TOKEN }}
-               branch: main
-         -  name: update 2023 google sheet # use pushed results to update Google Sheet
-            env:
-               KEYFILE: ${{ secrets.KEYFILE }}
-               SHEET_NAME: Test - Canadians in College
-               YEAR: 2023
-            run: |
-               python roster_scrape.py n
+               python -c 'from actions import players; players(fetch = True, update_google_sheet = False)'
