--- a/.github/workflows/cbn-scrape-roster-full.yml
+++ b/.github/workflows/cbn-scrape-roster-full.yml
@@ -21,4 +21,4 @@ jobs:
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python -c 'from actions import players; players(fetch = True, update_google_sheet = True)'
+               python -c 'from actions import players; players(fetch = True, update_google_sheet = True, copy_to_production = True)'
