--- a/.github/workflows/cbn-scrape-stat-full.yml
+++ b/.github/workflows/cbn-scrape-stat-full.yml
@@ -1,7 +1,7 @@
 name: cbn-scrape-stat-full
 on:
-   # schedule:
-      # - cron: '0 8 * * 2' # runs at 8:00 UTC on Tuesdays
+   schedule:
+      - cron: '0 8 * * 2' # runs at 8:00 UTC on Tuesdays
    workflow_dispatch:
 jobs:
    build:
@@ -17,3 +17,8 @@ jobs:
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
+         -  name: stat scrape python script
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+            run: |
+               python -c 'from actions import stats; stats(fetch = True, update_google_sheet = True, copy_to_production = True)'
