--- a/.github/workflows/cbn-scrape-stat-test.yml
+++ b/.github/workflows/cbn-scrape-stat-test.yml
@@ -14,3 +14,8 @@ jobs:
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
+         -  name: stat scrape python script
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+            run: |
+               python -c 'from actions import stats; stats(fetch = True, update_google_sheet = True, copy_to_production = False)'
