--- a/.github/workflows/scrape-schools.yml
+++ b/.github/workflows/scrape-schools.yml
@@ -1,5 +1,8 @@
-name: cbn-scrape-sheet-only
-on: workflow_dispatch
+name: scrape-schools
+on:
+   schedule:
+      - cron: '0 1 * 11-7 1' # https://crontab.cronhub.io
+   workflow_dispatch:
 jobs:
    build:
       runs-on: ubuntu-latest
@@ -9,13 +12,14 @@ jobs:
          -  name: setup python
             uses: actions/setup-python@v2
             with:
-               python-version: '3.9.12' # install the python version needed
+               python-version: '3.11.2' # install the python version needed
          -  name: install python packages
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
-         -  name: roster scrape python script
+         -  name: scrape schools
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+               GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
             run: |
-               python -c 'from actions import players, stats; players(fetch = False, update_google_sheet = True, copy_to_production = True); stats(fetch = False, update_google_sheet = True, copy_to_production = True)'
+               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.schools();'
