--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -1,7 +1,7 @@
 name: scrape-players
 on:
    schedule:
-      - cron: '0 15 * 11-7 1' # https://crontab.cronhub.io
+      - cron: '0 15 * 1-7,11-12 1' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
