--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,7 +1,7 @@
 name: unit-tests
 on:
    schedule:
-      - cron: '0 15 * * 3,6' # https://crontab.cronhub.io
+      - cron: '0 15 * * 3,6' # https://crontab.guru
    pull_request:
 jobs:
    build:
