--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -1,7 +1,7 @@
 name: scrape-players
 on:
    schedule:
-      - cron: '0 15 * 1-7,11-12 1' # https://crontab.guru
+      - cron: '0 12 * 1-7,11-12 1' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
@@ -17,6 +17,11 @@ jobs:
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
+         -  name: unit tests
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+            run: |
+               python unit_tests.py
          -  name: scrape players
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
