--- a/.github/workflows/scrape-stats.yml
+++ b/.github/workflows/scrape-stats.yml
@@ -1,7 +1,7 @@
-name: scrape-schools
+name: scrape-stats
 on:
    schedule:
-      - cron: '0 1 * 1-7,11-12 1' # https://crontab.guru
+      - cron: '0 12 * 3-7 2' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
@@ -22,9 +22,8 @@ jobs:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
                python unit_tests.py
-         -  name: scrape schools
+         -  name: scrape stats
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
-               GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
             run: |
-               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.schools();'
+               python -c 'import scrape; scrape.stats();'
