--- a/.github/workflows/update-stats-sheet.yml
+++ b/.github/workflows/update-stats-sheet.yml
@@ -1,7 +1,7 @@
-name: scrape-schools
+name: update-stats-sheet
 on:
    schedule:
-      - cron: '0 1 * 1-7,11-12 1' # https://crontab.guru
+      - cron: '0 15 * 3-7 2' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
@@ -17,14 +17,8 @@ jobs:
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
-         -  name: unit tests
+         -  name: scrape players
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python unit_tests.py
-         -  name: scrape schools
-            env:
-               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
-               GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
-            run: |
-               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.schools();'
+               python -c 'import google_sheets; google_sheets.update_stats_sheet();'
