--- a/.github/workflows/scrape-schools.yml
+++ b/.github/workflows/scrape-schools.yml
@@ -1,7 +1,7 @@
-name: cbn-scrape-stat-full
+name: scrape-schools
 on:
    schedule:
-      - cron: '0 8 * * 2' # runs at 8:00 UTC on Tuesdays
+      - cron: '0 1 * 1-7,11-12 1' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
@@ -12,13 +12,19 @@ jobs:
          -  name: setup python
             uses: actions/setup-python@v2
             with:
-               python-version: '3.9.12' # install the python version needed
+               python-version: '3.11.2' # install the python version needed
          -  name: install python packages
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
-         -  name: stat scrape python script
+         -  name: unit tests
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python -c 'from actions import stats; stats(fetch = True, update_google_sheet = True, copy_to_production = True)'
+               python unit_tests.py
+         -  name: scrape schools
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+               GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
+            run: |
+               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.schools();'
