--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
+# Python
+# python==3.11.2
+
+# Web Scraping
 requests==2.28.1
 beautifulsoup4==4.11.1
 lxml==4.9.1
 html5lib==1.1
+
+# Data Manipulation
 pandas==1.4.4
+
+# Google Sheets API
 gspread==5.7.1
 oauth2client==4.1.3
