--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,6 +14,7 @@ jobs:
             uses: actions/setup-python@v2
             with:
                python-version: '3.11.2' # install the python version needed
+               cache: 'pip' # caching pip dependencies
          -  name: install python packages
             run: |
                python -m pip install --upgrade pip
