Add caching for all actions and fix sorting

--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -13,6 +13,7 @@ jobs:
             uses: actions/setup-python@v2
             with:
                python-version: '3.11.2' # install the python version needed
+               cache: 'pip' # caching pip dependencies
          -  name: install python packages
             run: |
                python -m pip install --upgrade pip
