--- a/.github/workflows/update-players-sheet.yml
+++ b/.github/workflows/update-players-sheet.yml
@@ -13,11 +13,12 @@ jobs:
             uses: actions/setup-python@v2
             with:
                python-version: '3.11.2' # install the python version needed
+               cache: 'pip' # caching pip dependencies
          -  name: install python packages
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
-         -  name: scrape players
+         -  name: update players sheet
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
