--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -1,7 +1,7 @@
 name: scrape-players
 on:
    schedule:
-      - cron: '0 12 * 1-7,10-12 1' # https://crontab.guru
+      - cron: '0 20 * 1-7,10-12 0' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
@@ -28,4 +28,4 @@ jobs:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
                GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
             run: |
-               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.players();'
+               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.schools(); scrape.players();'
