Stop resetting scrape results with each run

--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -27,4 +27,4 @@ jobs:
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python -c 'import scrape; scrape.reset_roster_scrape_results(); scrape.schools(); scrape.players();'
+               python -c 'import scrape; scrape.schools(); scrape.players();'
