Add pause function

--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -26,5 +26,6 @@ jobs:
          -  name: scrape players
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+               GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
             run: |
                python -c 'import scrape; scrape.schools(); scrape.players(); scrape.email_additions();'
