--- a/.github/workflows/update-players-sheet.yml
+++ b/.github/workflows/update-players-sheet.yml
@@ -21,5 +21,8 @@ jobs:
          -  name: update players sheet
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+               MY_GMAIL: ${{ secrets.MY_GMAIL }}
+               BOB_GMAIL: ${{ secrets.BOB_GMAIL }}
+               GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
             run: |
-               python -c 'import google_sheets; google_sheets.update_canadians_sheet();'
+               python -c 'import google_sheets; google_sheets.update_canadians_sheet(); scrape.email_additions("bob");'
