--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -18,13 +18,18 @@ jobs:
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
-         # -  name: unit tests
-         #    env:
-         #       GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
-         #    run: |
-         #       python unit_tests.py
+         -  name: scrape schools
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+            run: |
+               python -c 'import scrape; scrape.schools();'
          -  name: scrape players
             env:
                GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
             run: |
-               python -c 'import scrape; scrape.schools(); scrape.players(); scrape.email_additions("pete");'
+               python -c 'import scrape; scrape.players();'
+         -  name: email additions
+            env:
+               GOOGLE_CLOUD_API_KEY: ${{ secrets.GOOGLE_CLOUD_API_KEY }}
+            run: |
+               python -c 'import scrape; scrape.email_additions("pete");'
