--- a/.github/workflows/scrape-players.yml
+++ b/.github/workflows/scrape-players.yml
@@ -1,7 +1,7 @@
 name: scrape-players
 on:
    schedule:
-      - cron: '0 20 * 1-7,10-12 0' # https://crontab.guru
+      - cron: '0 20 * * 0' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
